fix: adjust how canvas dimensions are computed (#385)
* fix: adjust how canvas dimensions are computed

- Set initial canvas size based on the available width
- Adjust the size of the text layer and highlights proportionally
- Add ResizeObserver to adjust canvas accordingly when page is resized
- only trigger the resize observer if the width has actually changed
- base the resolution on the displayed size to prevent blurriness
- only show scrollbars when necessary
- use `useSize` hook rather than `useResizeObserver`
- adjust canvas info function to use proper viewport scale value
- rename variables to make code more readable
- add comments to canvas info function

--- a/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview-pdf-viewer.scss
@@ -4,11 +4,27 @@
 
 .#{$prefix}--document-preview-pdf-viewer {
   display: flex;
-  justify-content: center;
+
+  // Take up entire width, but do not expand beyond it
+  width: 100%;
+  max-width: 100%;
 }
 
 .#{$prefix}--document-preview-pdf-viewer__wrapper {
   position: relative;
+
+  // This combination should force all browsers to
+  // allow full scrolling of PDFs when zoomed in
+  justify-content: safe center;
+  min-width: min-content;
+
+  // Center when smaller than the window width
+  margin-left: auto;
+  margin-right: auto;
+
+  // Prevent bottom whitespace from displaying
+  line-height: 0;
+
   @include pdfjsTextLayer;
 }
 
