--- a/packages/discovery-styles/scss/components/document-preview/_document-preview.scss
+++ b/packages/discovery-styles/scss/components/document-preview/_document-preview.scss
@@ -20,7 +20,7 @@
 
 .#{$prefix}--document-preview__document {
   position: relative;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .#{$prefix}--document-preview__document > * {
